[package]
name = "new-nu-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "new_nu_parser"
path = "src/lib.rs"

[dev-dependencies]
insta = { version = "1.33.0", features = ["glob"] }
